plugins {
    id 'java'
    // run 태스크와 jpackage에 필요한 application 플러그인
    id 'application'
    // 모듈 관련 보조 플러그인
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    // jlink / jpackage 플러그인
    id 'org.beryx.jlink' version '3.1.1'
}

group = 'dbps'
version = '1.0.0'

repositories {
    mavenCentral()
}



sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    modularity.inferModulePath = true // 자동 모듈 감지
}

// -----------------------------------
// application 플러그인 설정
// -----------------------------------
application {
    // module-info.java에 선언된 모듈명과 동일해야 합니다.
    mainModule = 'DBPS.main'
    mainClass = 'dbps.dbps.Simulator'
}

// -----------------------------------
// 의존성 설정
// -----------------------------------
def jfxVer = '17.0.14'
dependencies {
    // JavaFX (Windows 64비트)
    implementation "org.openjfx:javafx-base:${jfxVer}:win"
    implementation "org.openjfx:javafx-graphics:${jfxVer}:win"
    implementation "org.openjfx:javafx-controls:${jfxVer}:win"
    implementation "org.openjfx:javafx-fxml:${jfxVer}:win"

    // RichTextFX
    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    // jSerialComm
    implementation 'com.fazecast:jSerialComm:2.11.0'

    implementation 'org.json:json:20250107'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    // Paho MQTT
    implementation 'com.hivemq:hivemq-mqtt-client:1.3.5'
    implementation 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
}

// UTF-8 컴파일 옵션
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// ---------------------------------------------------------------------
// Paho MQTT 라이브러리의 모듈 이름 문제 해결
// (자동 모듈 이름이 끝에 숫자를 포함하는 문제를 피하기 위해 재정의)
// ---------------------------------------------------------------------

// -----------------------------------
// run 태스크를 모듈 방식으로 재정의
// -----------------------------------

jlink {
    options = [
            '--strip-debug',
            '--compress', '2',
            '--no-header-files',
            '--no-man-pages'
    ]
    mergedModule {
        enabled = false
    }
    addExtraDependencies("javafx")
    addExtraDependencies("automatic")

    launcher {
        name = 'dbPS'
    }

    jpackage {
        imageName = 'dbPS v1.4.2'
        installerName = 'dbProtocolSimulator'
        installerType = 'exe'
        icon = 'src/main/resources/icon-removebg.ico'
        installerOptions = [
                '--win-menu',
                '--win-shortcut'
        ]
        jvmArgs = [
                '--enable-preview',
        ]
    }
}

tasks.named("prepareMergedJarsDir") {
    doNotTrackState("Disabling state tracking due to non-regular files in merged jars")
}